typescript/checker/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            122,
        ),
        hi: BytePos(
            123,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:10:13
   |
10 | var c = new C(); // error
   |             ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            150,
        ),
        hi: BytePos(
            151,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:11:14
   |
11 | var c2 = new C(1); // ok
   |              ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            295,
        ),
        hi: BytePos(
            296,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:22:13
   |
22 | var d = new D(); // error
   |             ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            323,
        ),
        hi: BytePos(
            324,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:23:14
   |
23 | var d2 = new D(1); // ok
   |              ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            458,
        ),
        hi: BytePos(
            459,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:31:14
   |
31 | var d3 = new D(); // error
   |              ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            486,
        ),
        hi: BytePos(
            487,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:32:14
   |
32 | var d4 = new D(1); // ok
   |              ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            593,
        ),
        hi: BytePos(
            594,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:39:14
   |
39 | var d5 = new D(); // error
   |              ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            621,
        ),
        hi: BytePos(
            622,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/constructorFunctionTypes/classWithBaseClassButNoConstructor.ts:40:14
   |
40 | var d6 = new D(1); // ok
   |              ^

